EEC_InitBackup/src/objects/License__c.object
<CustomObject>
    <fields>
        <fullName>Summer_To__c</fullName>
        <description>The ending month for Provider&apos;s Summer operating schedule</description>
        <inlineHelpText>Select the ending month for the Provider&apos;s Summer operating schedule</inlineHelpText>
        <label>Summer-To:</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider operation time-of-year value option</description>
        <inlineHelpText>Select if Provider intends to operate for the summer only</inlineHelpText>
        <label>Summer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toddler_15mo_33mo__c</fullName>
        <description>Number of Toddler clients</description>
        <inlineHelpText>Enter the number of clients for this age group</inlineHelpText>
        <label>Toddler (15mo-33mo)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Toddler_Preschool_15mo_K__c</fullName>
        <description>Number of Toddler/Preschool clients</description>
        <inlineHelpText>Enter the number of clients for this age group</inlineHelpText>
        <label>Toddler/Preschool (15mo-K)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_License_Capacity__c</fullName>
        <description>Calculates sum of Large Group client category values</description>
        <formula>Infant_birth_15mo__c + Toddler_15mo_33mo__c + Preschool_33mo_K__c + Kindergarten__c + Multi_Age_Group_birth_14yr__c + Infant_Toddler_birth_33mo__c +  Toddler_Preschool_15mo_K__c + Preschool_SA_33mo_8yr__c + School_Age_5yr_14yr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates sum of Large Group client category values</inlineHelpText>
        <label>Total License Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <description>Transportation options available for Provider clients</description>
        <label>Transportation</label>
        <picklist>
            <picklistValues>
                <fullName>Near Public Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Public School Bus Route</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provides School Age Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walking Distance to School</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_EEC_License__c</fullName>
        <description>If Licensee does hold another EEC License(s) please list type of license(s):</description>
        <inlineHelpText>If Licensee does hold another EEC License(s) please list type of license(s):</inlineHelpText>
        <label>Type of EEC License</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X6_or_fewer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Total License Capacity Requested option for Small Group</description>
        <label>6 or fewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X7_8__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Total License Capacity Requested option for Small Group</description>
        <label>7-8</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X9_10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Total License Capacity Requested option for Small Group</description>
        <label>9-10</label>
        <type>Checkbox</type>
    </fields>
    <label>License Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Provider_No__c</columns>
        <columns>First_Issue_Date__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>License_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Lic# {000000}</displayFormat>
        <label>License No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Applications</pluralLabel>
    <recordTypes>
        <fullName>Adoption_Agency</fullName>
        <active>true</active>
        <label>Adoption Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCC</fullName>
        <active>true</active>
        <description>FCC - Select this record type when adding a License to a FCC Provider</description>
        <label>Family Child Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foster_Care_Agency</fullName>
        <active>true</active>
        <label>Foster Care Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Large_Group</fullName>
        <active>true</active>
        <description>This record type supports the License record for Large Group</description>
        <label>Large Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Residential</fullName>
        <active>true</active>
        <description>Residential Agency License</description>
        <label>Residential</label>
    </recordTypes>
    <recordTypes>
        <fullName>Small_Group</fullName>
        <active>true</active>
        <description>This record type supports the License record for Small Group</description>
        <label>Small Group</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>